--- a/pom.xml
+++ b/pom.xml
@@ -120,5 +120,13 @@
             <artifactId>spring-web</artifactId>
         </dependency>        
     </dependencies>
+	
+	<distributionManagement>
+		<repository>
+			<id>github</id>
+			<name>GitHub Packages</name>
+			<url>https://maven.pkg.github.com/dany0919/share</url>
+		</repository>
+	</distributionManagement>
 </project>
 
