--- a/.github/workflows/release-package.yml
+++ b/.github/workflows/release-package.yml
@@ -12,26 +12,20 @@ jobs:
       packages: write
     steps:
       - uses: actions/checkout@v4
-      - uses: actions/setup-java@v4
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
         with:
           java-version: '17'
           distribution: 'temurin'
-          architecture: x64
-      - name: Build with Maven
-        run: mvn -B package --file pom.xml
 
-  publish-gpr:
-    needs: build
-    runs-on: ubuntu-latest
-    permissions:
-      packages: write
-      contents: read
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-java@v4
+      - name: Cache Maven packages
+        uses: actions/cache@v3
         with:
-          java-version: '17'
-          distribution: 'temurin'
+          path: ~/.m2/repository
+          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+          restore-keys: |
+            ${{ runner.os }}-maven-
+
       - name: Publish package
         run: mvn --batch-mode deploy
         env:
